# pixel-tracer

./: CMakeLists.txt  README.md  area.c  area.h  circle.c  circle.h  id.c  id.h  line.c  line.h  main.c  pixel.c  pixel.h  point.c  point.h  polygon.c  polygon.h  rectangle.c  rectangle.h  shapes.c  shapes.h  square.c  square.h
